Passing Parameters from the build

--- a/src/resources/connection.properties
+++ b/src/resources/connection.properties
@@ -1,4 +1,4 @@
 Driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 url=jdbc:sqlserver://localhost:1434;databaseName=videoezy
-username=sa
-password=Cri$7Ron
+username=${dbUserName}
+password=${dbPassword}
